--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <!-- Header -->
 <div class="header">
     <h1>Bienvenue chez Purewear</h1>
-    <p class="welcome-text">Bonsoir ! Il est 22:18, découvrez nos montres de luxe aujourd'hui.</p>
+    <p class="welcome-text">Bonsoir ! Il est 22:30, découvrez nos montres de luxe aujourd'hui.</p>
     <button class="btn btn-custom btn-lg mt-3" onclick="showSection('products')">Explorer nos collections</button>
 </div>
 
@@ -169,11 +169,15 @@
     let cart = JSON.parse(localStorage.getItem('cart')) || [];
     function addToCart(productName, price) {
         const existingItem = cart.find(item => item.name === productName);
-        if (existingItem) existingItem.quantity += 1;
-        else cart.push({ name: productName, price, quantity: 1 });
-        localStorage.setItem('cart', JSON.stringify(cart));
-        alert(`${productName} ajouté au panier !`);
-        displayCart();
+        if (existingItem) {
+            alert(`${productName} est déjà dans le panier. Utilisez 'Supprimer' pour le retirer puis ajoutez à nouveau si nécessaire.`);
+            displayCart();
+        } else {
+            cart.push({ name: productName, price, quantity: 1 });
+            localStorage.setItem('cart', JSON.stringify(cart));
+            alert(`${productName} ajouté au panier !`);
+            displayCart();
+        }
     }
 
     function removeFromCart(productName) {
@@ -217,7 +221,7 @@
         });
         ['total', 'total-checkout'].forEach(id => {
             const el = document.getElementById(id);
-            if (el) el.textContent = total + ' €';
+            if (el) el.textContent = total.toFixed(2) + ' €';
         });
     }
 
@@ -236,7 +240,7 @@
             orderDetails += `${item.name} x${item.quantity} - ${item.price * item.quantity} €\n`;
             total += item.price * item.quantity;
         });
-        orderDetails += `Total: ${total} €\nDate: ${new Date().toLocaleString('fr-FR', { timeZone: 'Europe/Paris' })}`;
+        orderDetails += `Total: ${total.toFixed(2)} €\nDate: ${new Date().toLocaleString('fr-FR', { timeZone: 'Europe/Paris' })}`;
         const whatsappUrl = `https://wa.me/0665290743?text=${encodeURIComponent(orderDetails)}`;
         try {
             window.location.href = whatsappUrl;
@@ -270,7 +274,7 @@
             orderDetails += `${item.name} x${item.quantity} - ${item.price * item.quantity} €\n`;
             total += item.price * item.quantity;
         });
-        orderDetails += `Total: ${total} €\nDate: ${new Date().toLocaleString('fr-FR', { timeZone: 'Europe/Paris' })}`;
+        orderDetails += `Total: ${total.toFixed(2)} €\nDate: ${new Date().toLocaleString('fr-FR', { timeZone: 'Europe/Paris' })}`;
         const whatsappUrl = `https://wa.me/0665290743?text=${encodeURIComponent(orderDetails)}`;
         window.open(whatsappUrl, '_blank');
     }
