Fix img tag src attribute in index.html
Signed-off-by: elhaoulsaad-ship-it <elhaoulsaad@gmail.com>

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <section id="product-page">
             <h1>Machine de Boxe Musicale Intelligente</h1>
 
-            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEinC2FrtorGb8sePuZIr1FML8jGhtjwSoPai-wwPcp_INvbV3enSfum_GQwo-AWRWZYKXqxWuNy281SKuqTDgo3sk9dmQbo2OcG6WekCP8xLqmuSlPboXtC59-Q76KTlByGDqqUXjzA-0PmiT8x0hRcXuRubIhUdX74UyS5ojp_mFCrBodmXrs_vn3Ckrk/s1295/IMG_0659.jpeg" alt="Machine de Boxe Musicale TargetRythm">
+            <img src=https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEinC2FrtorGb8sePuZIr1FML8jGhtjwSoPai-wwPcp_INvbV3enSfum_GQwo-AWRWZYKXqxWuNy281SKuqTDgo3sk9dmQbo2OcG7WekCP8xLqmuSlPboXtC59-Q76KTlByGDqqUXjzA-0PmiT8x0hRcXuRubIhUdX74UyS5ojp_mFCrBodmXrs_vn3Ckrk/s1295/IMG_0659.jpeg alt="Machine de Boxe Musicale TargetRythm">
 
             <p class="description">
                 **Description :** Machine de boxe musicale pour pratique de réaction, cible murale intelligente, vitesse réglable, compatible Bluetooth pour enfants et adultes. Une nouvelle façon amusante et efficace d'améliorer votre coordination et votre cardio à la maison !
