--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
         .container {
-            max-width: 900px;
+            max-width: 600px; /* LARGEUR COMPACTE demandée */
             margin: 20px auto;
             padding: 20px;
             background-color: white;
@@ -40,6 +40,7 @@
             height: auto;
             border-radius: 8px;
             margin-bottom: 20px;
+            border: 1px solid #ddd;
         }
         .price {
             font-size: 36px;
@@ -107,7 +108,7 @@
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 4px;
-            box-sizing: border-box; /* S'assurer que le padding n'augmente pas la taille totale */
+            box-sizing: border-box; 
         }
         .payment-info {
             background-color: #fff3cd;
@@ -148,7 +149,7 @@
         <section id="product-page">
             <h1>Machine de Boxe Musicale Intelligente</h1>
 
-            <img src=https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEinC2FrtorGb8sePuZIr1FML8jGhtjwSoPai-wwPcp_INvbV3enSfum_GQwo-AWRWZYKXqxWuNy281SKuqTDgo3sk9dmQbo2OcG7WekCP8xLqmuSlPboXtC59-Q76KTlByGDqqUXjzA-0PmiT8x0hRcXuRubIhUdX74UyS5ojp_mFCrBodmXrs_vn3Ckrk/s1295/IMG_0659.jpeg alt="Machine de Boxe Musicale TargetRythm">
+            <img src="boxe-machine.jpg" alt="Machine de Boxe Musicale TargetRythm">
 
             <p class="description">
                 **Description :** Machine de boxe musicale pour pratique de réaction, cible murale intelligente, vitesse réglable, compatible Bluetooth pour enfants et adultes. Une nouvelle façon amusante et efficace d'améliorer votre coordination et votre cardio à la maison !
@@ -206,7 +207,7 @@
         // Variables globales pour le produit et le numéro WhatsApp
         const PRODUCT_NAME = "Machine de Boxe Musicale Intelligente";
         const PRODUCT_PRICE = 349; // DH
-        const WHATSAPP_NUMBER = "212665290743"; // Format international pour l'API
+        const WHATSAPP_NUMBER = "212665290743"; // Votre numéro 0665290743 en format international
 
         // Fonction pour afficher la page Panier et masquer la page Produit
         function addToCart() {
@@ -246,19 +247,13 @@ Veuillez confirmer ma commande. Merci.`;
             // Encodage du message pour l'URL
             const encodedMessage = encodeURIComponent(message);
 
-            // Construction du lien WhatsApp
-            const whatsappLink = `https://wa.me/${WHATSAPP_NUMBER}?text=${encodedMessage}`;
+            // CORRECTION FINALE WHATSAPP POUR IOS : Utilisation du schéma "whatsapp://"
+            const whatsappLink = `whatsapp://send?phone=${WHATSAPP_NUMBER}&text=${encodedMessage}`;
 
             // Redirection
             window.open(whatsappLink, '_blank');
-
-            // NOTE IMPORTANTE POUR VOUS :
-            // Après cette étape, la commande est confirmée via WhatsApp.
-            // C'est à VOUS d'enregistrer les détails du client (Nom, Email: ${email})
-            // et d'envoyer manuellement un e-mail de confirmation à l'adresse fournie
-            // (saadelhaoul0@gmail.com est votre adresse de réception, pas celle du client)
             
-            alert("Votre commande a été transmise ! Vous êtes maintenant redirigé vers WhatsApp pour finaliser l'achat. N'oubliez pas d'enregistrer les détails de cette commande et d'envoyer l'email de confirmation au client.");
+            alert("Votre commande a été transmise ! L'application WhatsApp devrait s'ouvrir directement.");
         }
     </script>
 
